@@ -28,19 +28,27 @@ class Gump_button;
 class VideoOptions_gump : public Modal_gump
 {
 	UNREPLICATABLE_CLASS_I(VideoOptions_gump,Modal_gump(0,0,0,0));
-
+	static VideoOptions_gump *video_options_gump;
  private:
 	Gump_button* buttons[10];
-
+// fullscreen
 	uint32 resolution;
 	int scaling;
 	int scaler;
-	int fullscreen;
+	int fullscreen; // window and fullscreen
 	uint32 game_resolution;
 	int fill_scaler;
 	Image_window::FillMode fill_mode;
 	bool has_ac;
-
+// window
+	uint32 win_resolution;
+	int win_scaling;
+	int win_scaler;
+	uint32 win_game_resolution;
+	int win_fill_scaler;
+	Image_window::FillMode win_fill_mode;
+	bool win_has_ac;
+// fullscreen
 	uint32 o_resolution;
 	int o_scaling;
 	int o_scaler;
@@ -48,21 +56,30 @@ class VideoOptions_gump : public Modal_gump
 	uint32 o_game_resolution;
 	int o_fill_scaler;
 	Image_window::FillMode o_fill_mode;
-
+// window
+	uint32 o_win_resolution;
+	int o_win_scaling;
+	int o_win_scaler;
+	uint32 o_win_game_resolution;
+	int o_win_fill_scaler;
+	Image_window::FillMode o_win_fill_mode;
+// fullscreen
 	static uint32 *resolutions;
 	static int num_resolutions;
-
-	static uint32 *win_resolutions;
-	static int num_win_resolutions;
-
 	static uint32 game_resolutions[3];
 	static int num_game_resolutions;
-
 	static Image_window::FillMode startup_fill_mode;
-
+//window
+	static uint32 *win_resolutions;
+	static int num_win_resolutions;
+	static uint32 win_game_resolutions[3];
+	static int num_win_game_resolutions;
+	static Image_window::FillMode startup_win_fill_mode;
  public:
 	VideoOptions_gump();
 	virtual ~VideoOptions_gump();
+	static VideoOptions_gump *get_instance()
+		{ return video_options_gump; }
 
 					// Paint it and its contents.
 	virtual void paint();
@@ -79,6 +96,32 @@ class VideoOptions_gump : public Modal_gump
 	void load_settings();
 	void save_settings();
 	void cancel();
+// fullscreen
+	void set_scaling(int scaleVal)
+	{ scaling = scaleVal; }
+	void set_scaler(int scalerNum)
+	{ scaler = scalerNum; }
+	void set_resolution(uint32 Res)
+	{ resolution = Res; }
+	void set_game_resolution(uint32 gRes)
+	{ game_resolution = gRes; }
+	void set_fill_scaler(int f_scaler)
+	{ fill_scaler = f_scaler; }
+	void set_fill_mode(Image_window::FillMode f_mode)
+	{ fill_mode = f_mode; }
+// window
+	void set_win_scaling(int win_scaleVal)
+	{ win_scaling = win_scaleVal; }
+	void set_win_scaler(int win_scalerNum)
+	{ win_scaler = win_scalerNum; }
+	void set_win_resolution(uint32 win_Res)
+	{ win_resolution = win_Res; }
+	void set_win_game_resolution(uint32 win_gRes)
+	{ win_game_resolution = win_gRes; }
+	void set_win_fill_scaler(int win_f_scaler)
+	{ win_fill_scaler = win_f_scaler; }
+	void set_win_fill_mode(Image_window::FillMode win_f_mode)
+	{ win_fill_mode = win_f_mode; }
 };
 
 #endif
